# VCMIRLTraining

./: .gitignore  README.md  pyproject.toml
src/vcmi_rl_training/: __init__.py  model.py  ppo.py  train.py
