[project]
name = "vcmi-rl-training"
version = "0.1.0"
description = "Reinforcement learning training for VCMI battle AI"
requires-python = ">=3.13"
dependencies = [
    "vcmigym",
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "torch>=2.0.0",
]

[project.scripts]
vcmi-train = "vcmi_rl_training.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcmi_rl_training"]

[tool.uv.sources]
vcmigym = { path = "../VCMIGym", editable = true }
